--- a/frontend/src/styles/navbar/Navbar.module.css
+++ b/frontend/src/styles/navbar/Navbar.module.css
@@ -140,7 +140,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  z-index: 2;
+  z-index: 5;
 }
 
 /* Mobile Styles */
